@@ -1,3 +1,8 @@
+2005-11-16  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-xslt-pager.c:
+	 Fix invalid read (bug #166715)
+
 2005-11-09  Brent Smith  <gnome@nextreality.net>
 
 	* stylesheets/toc2html.xsl:
